<resources>
    <string name="app_name">17-ActividadesPasoParametros</string>
    <string name="actividad1">ACTIVIDAD 01</string>
    <string name="actividad2">ACTIVIDAD 02</string>
    <string name="actividad3">ACTIVIDAD 03</string>
    <string name="actividad4">ACTIVIDAD 04</string>
    <string name="actividad5">ACTIVIDAD 05</string>
    <string name="salir">SALIR</string>
    <!--Actividad1-->
    <string name="nombre">Nombre:</string>
    <string name="apellidos">Apellidos:</string>
    <string name="verificar">Verificar</string>
    <string name="aceptar">Aceptas condiciones:</string>
    <string name="volver">Volver</string>
    <!--Actividad_aceptar_condiciones-->
    <string name="aceptar2">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <!--Actividad2-->
    <string name="conectar">Conectar</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="boton">INICIAR SESION</string>
    <string name="olvidar">¿Olvidaste tu contraseña?</string>
    <!--Actividad3-->
    <string name="calculadora">Calculadora Simple</string>
    <string name="suma">SUMA</string>
    <string name="resultado">RESULTADO</string>
    <string name="correctas">PREGUNTAS CORRECTAS:</string>
    <string name="incorrectas">INCORRECTAS:</string>
    <!--actividad4-->
    <string name="introducirDatos">Introduce tus datos:</string>
    <string name="nombre4">Nombre:</string>
    <string name="apellidosejer4">Apellidos:</string>
    <string name="sexo">Sexo:</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="aficiones">Aficiones:</string>
    <string name="musica">Musica</string>
    <string name="lectura">Lectura</string>
    <string name="deportes">Deportes</string>
    <string name="viajar">Viajar</string>
    <string name="enviar">Enviar</string>
    <!--actividad5-->
    <string name="ListaCompra">Lista de la compra:</string>
    <string name="Tienda">Tienda:</string>
    <string name="confirmar">Confirmar</string>
    <string name="productos">Productos:</string>
    <string name="leche">Leche</string>
    <string name="pan">Pan</string>
    <string name="pasta">Pasta</string>
    <string name="pescado">Pescado</string>
</resources>
