<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <Button
        android:id="@+id/but1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actividad1"
        android:onClick="click"/>
    <Button
        android:id="@+id/but2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actividad2"
        android:layout_marginTop="10dp"
        android:onClick="click"/>
    <Button
        android:id="@+id/but3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actividad3"
        android:layout_marginTop="10dp"
        android:onClick="click"/>
    <Button
        android:id="@+id/but4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actividad4"
        android:layout_marginTop="10dp"
        android:onClick="click"/>
    <Button
        android:id="@+id/but5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actividad5"
        android:layout_marginTop="10dp"
        android:onClick="click"/>
    <Button
        android:id="@+id/salir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salir"
        android:layout_marginTop="10dp"/>

</LinearLayout>
