<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellidos"
        android:textSize="20dp"/>
    <EditText
        android:id="@+id/editTextApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/verificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verificar"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/aceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aceptar"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>
    <Button
        android:id="@+id/volver"
        android:drawableLeft="@drawable/ic_action_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:layout_marginTop="10dp"
        />
</LinearLayout>
