<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.a17_actividadespasoparametros.Actividad2">

    <TextView
        android:id="@+id/lblConectar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conectar"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:layout_marginTop="30dp"/>
    <EditText
        android:id="@+id/introUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblConectar"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/usuario"
        />
    <EditText
        android:id="@+id/introContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/introUsuario"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:hint="@string/contrasena"
        />
    <Button
        android:id="@+id/butSesion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/boton"
        android:layout_below="@+id/introContra"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/butSesion"
        android:text="@string/olvidar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="20dp"
        />

</RelativeLayout>
