<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.a17_actividadespasoparametros.Ejercicio4Resultado">

    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textAppearance="?android:textAppearanceLarge"/>
    <TextView
        android:id="@+id/ape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apellidosejer4"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/nom"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <TextView
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/ape"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <TextView
        android:id="@+id/aficiones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:layout_below="@+id/sex"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:layout_below="@+id/aficiones"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:drawableLeft="@drawable/ic_action_name"
        android:onClick="volver"/>

</RelativeLayout>
