<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dm2.a17_actividadespasoparametros.Actividad3">

    <TextView
        android:id="@+id/lblSuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/suma"
        android:textAppearance="?android:textAppearanceLarge"
        />
    <EditText
        android:id="@+id/textnum1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblSuma"
        android:layout_centerHorizontal="true"
        />
    <TextView
        android:id="@+id/lblmas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+"
        android:textSize="30dp"
        android:layout_toRightOf="@+id/textnum1"
        android:layout_below="@+id/lblSuma"/>
    <EditText
        android:id="@+id/textnum2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblSuma"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/lblmas"
        />
    <TextView
        android:id="@+id/lbligual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="="
        android:textSize="30dp"
        android:layout_toRightOf="@+id/textnum2"
        android:layout_below="@+id/lblSuma"/>
    <EditText
        android:id="@+id/textnum3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lblSuma"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@+id/lbligual"
        android:inputType="number"
        />
    <Button
        android:id="@+id/butResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="COMPROBAR RESULTADO"
        android:layout_below="@+id/textnum2"
        android:layout_centerHorizontal="true"
        android:onClick="resultado"/>
    <TextView
        android:id="@+id/correctas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correctas"
        android:textSize="15dp"
        android:layout_below="@+id/butResultado"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <TextView
        android:id="@+id/incorrectas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/incorrectas"
        android:textSize="15dp"
        android:layout_below="@+id/butResultado"
        android:layout_toRightOf="@+id/correctas"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

</RelativeLayout>
